Chat overflow fix
git-svn-id: http://demovibes.googlecode.com/svn/branches/jinja_merge@387 5733aaf2-ac46-11de-892d-7b2b76e7707e

--- a/static/themes/chat.css
+++ b/static/themes/chat.css
@@ -1,4 +1,4 @@
-body { width: 100%; }
+body { width: 99%; overflow-x: hidden }
 
 #site { width: 100%; }
 #chatbox-main {
